Should have done so sooner, part 2. Moved source code files to separate src directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,10 +36,10 @@ if (ASSIMP_FOUND)
 endif(ASSIMP_FOUND)
 
 file(GLOB SOURCE_FILES
-        *.cpp
-        *.c
-        *.hpp
-        *.h
+        src/*.cpp
+        src/*.c
+        src/*.hpp
+        src/*.h
         SOIL2/*.c
         SOIL2/*.h)
 
